--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+  <header>
+
+      <div class="topnav">
+          <h1 class="logo">COMPANY</h1>
+        <a href="#">Contact</a>
+        <a href="#">About</a>
+        <a href="#">Home</a>
+      </div>
+  </header>
+  <section class="hero">
+    <h1 class="splashText">THE MORE YOU KNOW</h1>
+  </section>
+  <div class="outer-div">
+    <div class="inner-div">
+      <img src="FPPEP.png"/>
+      <img src="FPPEP.png"/>
+      <img src="FPPEP.png"/>
+    </div>
+    <div class="inner-div">
+      <img class="walla" width="400px" src="walla.jpg"/>
+      <img class="walla" width="400px" src="walla.jpg"/>
+    </div>
+    <div class="inner-div">
+      <p class="bodyCopy">Lorem ipsum dolor amet humblebrag vinyl unicorn, intelligentsia four loko cred poutine organic tote bag ennui food truck master cleanse lumbersexual tacos meh. Cronut bicycle rights helvetica, pour-over lomo cloud bread +1 retro skateboard kickstarter. Kombucha migas heirloom, VHS four loko drinking vinegar ugh shoreditch glossier tacos 8-bit forage echo park aesthetic. Tofu ugh mumblecore, twee fam tbh brunch letterpress polaroid lyft umami XOXO. Yr photo booth letterpress you probably haven't heard of them skateboard hexagon, franzen affogato wayfarers squid microdosing cred la croix art party.</p>
+      <img src="nikolaibrokethezoom.png" width="200px"/>
+    </div>
+  </div>
+  <footer>
+  </footer>
+</html>
